NM-5494 404 on time & expenses

--- a/lib/tasks/uot/templates/dashboard_company_transactables_client_listing.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_client_listing.liquid
@@ -111,7 +111,7 @@
       {% endif %}
 
 
-    {% elsif current_status == "in progress" or current_status == "archived" %}
+    {% elsif current_status == "in progress" or current_status == "archived" and accepted_order != blank %}
       <h3>Offer</h3>
       <div class="table-responsive">
         <table class="table">
