--- a/lib/tasks/uot/templates/dashboard_company_transactables_sme_actions.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_sme_actions.liquid
@@ -2,7 +2,7 @@
 
   {% if current_status != 'archived' %}
     <li>
-      <a href="{{ transactable.show_path }}" class="btn btn-default">Project details</a>
+      <a href="{{ transactable.show_path }}" class="btn btn-default">Project Details</a>
     </li>
   {% endif %}
 
