--- a/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
@@ -1,7 +1,7 @@
 <ul class="actions-a">
 
   {% if current_status != 'archived' %}
-    <li><a href="{{ transactable.show_path }}" class="btn btn-default">Show project page</a></li>
+    <li><a href="{{ transactable.show_path }}" class="btn btn-default">Project Details</a></li>
   {% endif %}
 
   {% if current_status == 'pending' %}
@@ -17,7 +17,7 @@
   {% endif %}
 
   {% if current_status != 'archived' %}
-    <li><a href='{{ transactable.cancel_path }}' data-confirm="Are you sure you want to cancel this project?" class="btn btn-danger">Cancel Project</a></li>
+    <li><a href='{{ transactable.cancel_path | append: "?status=" | append: current_status }}' data-confirm="Are you sure you want to cancel this project?" class="btn btn-danger">Cancel Project</a></li>
   {% endif %}
 
   {% if current_status == 'in progress' %}
