NM-5436 Short lists loaded on search refresh

--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -100,7 +100,7 @@
             </div>
 
             {% for user in searcher.results %}
-                <article class="user-a">
+                <article class="user-a" id="user-{{ user.id }}">
                     <div class="wrapper">
                         <header class="header">
                             <figure>
@@ -188,6 +188,12 @@
                     </div>
                     {% endif %}
                 </article>
+
+                <script>
+                  $(function(){
+                    $(document).trigger('userLoaded.uot', 'user-{{user.id}}')
+                  });
+                </script>
 
                 <div class="project-invite" id="project-invite-{{ user.id }}" data-collaborations-url="{{ 'collaborations_for_current_user_dashboard_company_user_path' | generate_url: user.id }}"></div>
             {% endfor %}
