--- a/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
@@ -24,7 +24,7 @@
     <hr/>
 
     {% if accepted_order.transactable_user_messages.size == 0 %}
-      <li><a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a></li>
+      <li><a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id, user_id: accepted_order.user.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a></li>
     {% else %}
       <li><a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: accepted_order.transactable_user_messages.first.id }}">{{ 'dashboard.user_reservations.send_message' | t}}</a></li>
     {% endif %}
