--- a/app/frontend/stylesheets/community.scss
+++ b/app/frontend/stylesheets/community.scss
@@ -46,6 +46,7 @@
 @import "intel/modules/flash-messages";
 @import "intel/modules/group";
 @import "intel/modules/search";
+@import "intel/modules/notification_preferences";
 
 @import "intel/modules/intro-video";
 
