--- a/app/views/group_mailer/member_has_quit.text.liquid
+++ b/app/views/group_mailer/member_has_quit.text.liquid
@@ -1,3 +1,1 @@
-Hi {{ owner.first_name }}
-
-{{ user.first_name }} ({{ user.profile_url }}) decided to be no longer member on {{ group.name }} ({{ group.show_url }})
+{{ user.first_name }} ({{ user.profile_url }}) decided to be no longer member of {{ group.name }} ({{ group.show_url }})
