--- a/app/views/group_mailer/member_has_quit.html.liquid
+++ b/app/views/group_mailer/member_has_quit.html.liquid
@@ -1,3 +1,1 @@
-<h1>Hi, {{ owner.first_name }}</h1>
-
-<p><a href="{{ user.profile_url }}">{{ user.first_name }}</a> decided to be no longer member on <a href="{{ group.show_url }}">{{ group.name }}</a>
+<p><a href="{{ user.profile_url }}">{{ user.first_name }}</a> decided to be no longer member of <a href="{{ group.show_url }}">{{ group.name }}</a>
