--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -1,14 +1,15 @@
 {% content_for 'hero' %}
     <div class="search-form" id="listing_search">
         <div class="wrapper-a">
-            <form action="/search" method="get">
+            <form action="/search" method="get" id="search-form">
                 <div class="query">
                     <label for="field-q" class="struct-label">Search keyword</label>
                     <input type="text" name="query" id="field-q" placeholder="Enter keywords&hellip;" value="{{ params['query'] }}">
                     <input type="hidden" name="lg_custom_attributes[workplace_type]" value="{{ searcher.lg_custom_attributes_hash['workplace_type'] }}">
                     <input type="hidden" name="lg_custom_attributes[travel]" value="{{ searcher.lg_custom_attributes_hash['travel'] }}">
                     <input type="hidden" name="category_ids" value="{{ searcher.category_ids }}">
-                    <input type="hidden" name="page" value="{{ searcher.current_page }}">
+                    <input type="hidden" name="per_page" value="{{ searcher.per_page }}">
+                    <input type="hidden" name="page" value="{{ searcher.current_page }}" id="input-page">
                     <input type="hidden" name="query_fields" value="tags">
                     <input type="hidden" name="sort">
 
@@ -99,108 +100,110 @@
                 <span class="results-count"><b>{{ searcher.result_count }}</b> Result(s) Found</span>
             </div>
 
-            {% for user in searcher.results %}
-                <article class="user-a" id="user-{{ user.id }}">
-                    <div class="wrapper">
-                        <header class="header">
-                            <figure>
-                                <img src="{{user.avatar_url_big}}" alt="{{ user.name }}">
-                            </figure>
-                            <h2><a href="{{ user.user_profile_url }}">{{ user.name }}</a></h2>
+            <div class="search-results-items">
+              {% for user in searcher.results %}
+                  <article class="user-a" id="user-{{ user.id }}">
+                      <div class="wrapper">
+                          <header class="header">
+                              <figure>
+                                  <img src="{{user.avatar_url_big}}" alt="{{ user.name }}">
+                              </figure>
+                              <h2><a href="{{ user.user_profile_url }}">{{ user.name }}</a></h2>
 
-                            <div class="properties">
-                                <p class="price">
-                                    <strong>{{ user.buyer_properties.hourly_rate }} USD / hr</strong>
-                                </p>
-                                <dl class="property">
-                                    <dt>Discounts:</dt>
-                                    <dd>{{ user.buyer_properties.discounts_available | humanize }}</dd>
-                                </dl>
-                            </div>
+                              <div class="properties">
+                                  <p class="price">
+                                      <strong>{{ user.buyer_properties.hourly_rate }} USD / hr</strong>
+                                  </p>
+                                  <dl class="property">
+                                      <dt>Discounts:</dt>
+                                      <dd>{{ user.buyer_properties.discounts_available | humanize }}</dd>
+                                  </dl>
+                              </div>
 
-                            <div class="contact">
-                                <a class="button-b action-message" data-href='{{ user.user_message_path }}' data-modal='true'>Send Message</a>
-                                {{ user.click_to_call_button }}
-                            </div>
-                        </header>
+                              <div class="contact">
+                                  <a class="button-b action-message" data-href='{{ user.user_message_path }}' data-modal='true'>Send Message</a>
+                                  {{ user.click_to_call_button }}
+                              </div>
+                          </header>
 
-                        {% assign aoe_category = user.buyer_categories['Area Of Expertise'] %}
-                        {% assign industry_category = user.buyer_categories['Industry'] %}
-                        {% assign languages_category = user.buyer_categories['Languages'] %}
+                          {% assign aoe_category = user.buyer_categories['Area Of Expertise'] %}
+                          {% assign industry_category = user.buyer_categories['Industry'] %}
+                          {% assign languages_category = user.buyer_categories['Languages'] %}
 
-                        {% if aoe_category.children.size > 0 || industry_category.children.size > 0 || languages_category.children.size > 0 || user.buyer_properties.bio != blank %}
-                            <div class="content">
-                                {% if aoe_category.children.size > 0 %}
-                                    <h3>{{ aoe_category.name }}</h3>
-                                    <ul class="short-list">
-                                        {% for expertise in aoe_category.children %}
-                                        <li>{{ expertise }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                {% endif %}
+                          {% if aoe_category.children.size > 0 || industry_category.children.size > 0 || languages_category.children.size > 0 || user.buyer_properties.bio != blank %}
+                              <div class="content">
+                                  {% if aoe_category.children.size > 0 %}
+                                      <h3>{{ aoe_category.name }}</h3>
+                                      <ul class="short-list">
+                                          {% for expertise in aoe_category.children %}
+                                          <li>{{ expertise }}</li>
+                                          {% endfor %}
+                                      </ul>
+                                  {% endif %}
 
-                                {% if industry_category.children.size > 0 %}
-                                    <h3>{{ industry_category.name }}</h3>
-                                    <ul class="short-list">
-                                        {% for industry in industry_category.children %}
-                                        <li>{{ industry }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                {% endif %}
+                                  {% if industry_category.children.size > 0 %}
+                                      <h3>{{ industry_category.name }}</h3>
+                                      <ul class="short-list">
+                                          {% for industry in industry_category.children %}
+                                          <li>{{ industry }}</li>
+                                          {% endfor %}
+                                      </ul>
+                                  {% endif %}
 
-                                {% if languages_category.children.size > 0 %}
-                                    <h3>{{ languages_category.name }}</h3>
-                                    <p>{{ languages_category.children | join: ', ' }}</p>
-                                {% endif %}
+                                  {% if languages_category.children.size > 0 %}
+                                      <h3>{{ languages_category.name }}</h3>
+                                      <p>{{ languages_category.children | join: ', ' }}</p>
+                                  {% endif %}
 
-                                {% if user.buyer_properties.bio != blank %}
-                                    <h3>Bio</h3>
-                                    <p>{{ user.buyer_properties.bio }}</p>
-                                {% endif %}
-                            </div>
-                        {% endif %}
-                    </div>
+                                  {% if user.buyer_properties.bio != blank %}
+                                      <h3>Bio</h3>
+                                      <p>{{ user.buyer_properties.bio }}</p>
+                                  {% endif %}
+                              </div>
+                          {% endif %}
+                      </div>
 
-                    <aside class="sidebar">
-                        <ul class="actions-a">
-                            {% if current_user != blank and current_user.has_seller_profile? %}
-                                <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
-                            {% endif %}
+                      <aside class="sidebar">
+                          <ul class="actions-a">
+                              {% if current_user != blank and current_user.has_seller_profile? %}
+                                  <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
+                              {% endif %}
 
-                            <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
-                            {% if user.has_active_blog? %}
-                                <li><a href="{{ user.user_blog_posts_list_path }}" class="button-b action-blog">View Blog</a></li>
-                            {% endif %}
-                            {% if user.buyer_properties['linkedin_url'] != blank %}
-                                <li><a href="{{ user.buyer_properties['linkedin_url'] }}" class="button-b action-linkedin" target="_blank">LinkedIn Bio</a></li>
-                            {% endif %}
-                        </ul>
-                    </aside>
+                              <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
+                              {% if user.has_active_blog? %}
+                                  <li><a href="{{ user.user_blog_posts_list_path }}" class="button-b action-blog">View Blog</a></li>
+                              {% endif %}
+                              {% if user.buyer_properties['linkedin_url'] != blank %}
+                                  <li><a href="{{ user.buyer_properties['linkedin_url'] }}" class="button-b action-linkedin" target="_blank">LinkedIn Bio</a></li>
+                              {% endif %}
+                          </ul>
+                      </aside>
 
-                    {% if user.tags.size > 0 %}
-                    <div class="tags-a tags-short-list">
-                        <h4>Tags</h4>
-                        <ul>
-                            {% for tag in user.tags %}
-                                <li><a href="?query_fields=tags&amp;query={{ tag.name }}">{{ tag.name }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    {% endif %}
-                </article>
+                      {% if user.tags.size > 0 %}
+                      <div class="tags-a tags-short-list">
+                          <h4>Tags</h4>
+                          <ul>
+                              {% for tag in user.tags %}
+                                  <li><a href="?query_fields=tags&amp;query={{ tag.name }}">{{ tag.name }}</a></li>
+                              {% endfor %}
+                          </ul>
+                      </div>
+                      {% endif %}
+                  </article>
 
-                <script>
-                  $(function(){
-                    $(document).trigger('userLoaded.uot', 'user-{{user.id}}')
-                  });
-                </script>
+                  <script>
+                    $(function(){
+                      $(document).trigger('userLoaded.uot', 'user-{{user.id}}')
+                    });
+                  </script>
 
-                <div class="project-invite" id="project-invite-{{ user.id }}" data-collaborations-url="{{ 'collaborations_for_current_user_dashboard_company_user_path' | generate_url: user.id }}"></div>
-            {% endfor %}
+                  <div class="project-invite" id="project-invite-{{ user.id }}" data-collaborations-url="{{ 'collaborations_for_current_user_dashboard_company_user_path' | generate_url: user.id }}"></div>
+              {% endfor %}
+            </div>
 
             {% if searcher.next_page %}
                 <p class="search-results-more-trigger">
-                    <a href="./" class="button-a load-more" data-next-page='{{ searcher.next_page }}'>More Results</a>
+                    <button type="button" class="button-a" data-page='{{ searcher.next_page }}'>More Results</button>
                 </p>
             {% endif %}
         </section>
