NM-5520 T&E completed sme button

--- a/lib/tasks/uot/templates/dashboard_company_transactables_sme_actions.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_sme_actions.liquid
@@ -14,6 +14,11 @@
     {% endif %}
   </li>
 
+  {% if order != blank and transactable.completed? == true %}
+    <li><a href="{{ 'dashboard_order_order_items_path' | generate_url: order_id: order.id, transactable_id: transactable.id }}" class="btn btn-default">View Time &amp; Expenses</a></li>
+  {% endif %}
+
+
   {{ transactable.creator.click_to_call_button }}
 
   {% if can_make_offer == true %}
