--- a/lib/tasks/uot/templates/registrations_show.liquid
+++ b/lib/tasks/uot/templates/registrations_show.liquid
@@ -1,3 +1,5 @@
+{% assign title = platform_context.name | append: ' - ' | append: user.name %}
+{% title title %}
 <main id="main">
     <div class="wrapper-a">
         <div class="back-to-search-results">
