--- a/app/views/sellers/_seller_form.html.haml
+++ b/app/views/sellers/_seller_form.html.haml
@@ -7,7 +7,8 @@
 - elsif only_inputs.empty? || f.object.instance_profile_type.custom_model_types.map { |c| "Custom Model - #{c.name}".to_sym }.include?(only_inputs.first)
   - custom_model = f.object.instance_profile_type.custom_model_types.find_by(name: only_inputs.first.to_s.split(" - ")[1])
   = render 'registrations/attributes/custom_model_fields', custom_model: custom_model, f: f
-- else
+- elsif (f.object.instance_profile_type.try(:custom_attributes).map{ |a| a.name.to_sym } & only_inputs).any?
   - f.object.instance_profile_type.try(:custom_attributes).try(:each) do |attribute|
     = draw_attribute_for_form(attribute, properties_form) if only_inputs.empty? || only_inputs.include?(attribute.name.to_sym)
-
+- elsif f.object.user.respond_to?(only_inputs.first)
+  = render :partial => 'registrations/new_attributes', :locals => { f: user_form, only_inputs: only_inputs }
