--- a/app/views/dashboard/user_messages/_form.html.haml
+++ b/app/views/dashboard/user_messages/_form.html.haml
@@ -6,7 +6,7 @@
 
   .dialog__body
     = f.input :body
-  = f.simple_fields_for :attachments, @user_message.attachments.build, html: { :'data-attachment-form'=> true } do |attachment|
+  = f.simple_fields_for :attachments, @user_message.attachments.first_or_initialize, html: { :'data-attachment-form'=> true } do |attachment|
     = attachment.input :file, as: :file, input_html: { data: { file: true } }
 
   .dialog__actions
