--- a/lib/tasks/uot/templates/mailers/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
+++ b/lib/tasks/uot/templates/mailers/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
@@ -4,4 +4,4 @@
 You have been invited to a project by {{ lister.name }}. You will now have the ability to review the project details and contact the client for any questions or follow-up. If you are interested in the project, you can make an offer at anytime. If you are not interested you may kindly reject the offer as well.
 </p>
 
-<p>Click <a href="{{ transactable.listing_url }}">{{ transactable.name }}</a> to view the project details.</p>
+<p><a href="{{ transactable.listing_url }}">Click here to view the project details.</a></p>
