--- a/app/views/layouts/_header_navigation.html.haml
+++ b/app/views/layouts/_header_navigation.html.haml
@@ -83,7 +83,7 @@
               %span= t 'top_navbar.account'
 
         - if HiddenUiControls.find('main_menu/view_profile').visible?
-          %li
+          %li.view_profile
             = link_to main_app.user_path(current_user), class: 'nav-link dropdown-toggle', target: '_blank' do
               %span= t 'top_navbar.view_profile'
 
