--- a/lib/tasks/uot/templates/dashboard_company_transactables_client_listing.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_client_listing.liquid
@@ -17,13 +17,21 @@
           <dt>Workplace</dt>
           <dd>{{ transactable.properties.workplace_type }}</dd>
 
-          {% if transactable.properties.workplace_type == 'On Site' %}
+          {% if transactable.properties.workplace_type | matches: 'On Site' %}
             <dt>Office</dt>
             <dd>{{ transactable.properties.office_location }}</dd>
           {% endif %}
 
-          <dt>Approx. Budget</dt>
-          <dd>{{ transactable.properties.budget | pricify }}</dd>
+          {% if transactable.action_free_booking? %}
+            <dt>Type</dt>
+            <dd>Pro Bono</dd>
+          {% else %}
+            <dt>Type</dt>
+            <dd>Paid</dd>
+
+            <dt>Approx. Budget</dt>
+            <dd>{{ transactable.properties.budget | pricify }}</dd>
+          {% endif %}
 
           <dt>Deadline</dt>
           <dd>{{ transactable.properties.deadline | to_date | l: 'short' }}</dd>
