--- a/lib/tasks/uot/templates/registrations_edit_options.liquid
+++ b/lib/tasks/uot/templates/registrations_edit_options.liquid
@@ -1,5 +1,6 @@
-{% if current_user.has_buyer_profile? %}
   <div class="options">
-    <a href="{{ current_user.user_profile_url }}">{{ 'dashboard.user_profile.view_profile_html' | t }}</a>
+    <a href="#" onclick="$('form#edit_user').submit()" class="btn btn-default">Save</a>
+    {% if current_user.has_buyer_profile? %}
+      <a href="{{ current_user.user_profile_url }}">{{ 'dashboard.user_profile.view_profile_html' | t }}</a>
+    {% endif %}
   </div>
-{% endif %}
